--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
+		"prettier-format": "prettier --write",
+		"lint-staged": "lint-staged",
 		"prepare": "husky"
+	},
+	"lint-staged": {
+		"*.{js,jsx,,ts,tsx}": [
+			"pnpm lint",
+			"pnpm prettier-format"
+		]
 	},
 	"keywords": [],
 	"author": "",
@@ -20,7 +28,9 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"husky": "^9.0.10",
+		"lint-staged": "^15.2.1",
 		"prettier": "^3.2.4",
+		"rollup": "^4.9.6",
 		"typescript": "^5.3.3"
 	}
 }
