--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,7 @@
 		"es2021": true,
 		"node": true
 	},
-	"extends": [
-		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended",
-		"prettier",
-		"plugin:prettier/recommended"
-	],
+	"extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier", "plugin:prettier/recommended"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
@@ -20,6 +15,9 @@
 		"prettier/prettier": "error",
 		"no-case-declarations": "off",
 		"no-constant-condition": "off",
-		"@typescript-eslint/ban-ts-comment": "off"
+		"no-unused-vars": "off",
+		"@typescript-eslint/ban-ts-comment": "off",
+		"@typescript-eslint/no-explicit-any": "off",
+		"@typescript-eslint/no-unused-vars": "error"
 	}
 }
