--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -3,6 +3,9 @@
 	"version": "1.0.0",
 	"description": "react 公用方法",
 	"module": "index.ts",
+	"dependencies": {
+		"shared": "workspace:*"
+	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT"
