--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
 		"prettier-format": "prettier --write",
 		"lint-staged": "lint-staged",
+		"build": "rollup --bundleConfigAsCjs --config scripts/rollup/react.config.js",
 		"prepare": "husky"
 	},
 	"lint-staged": {
@@ -21,6 +22,8 @@
 	"devDependencies": {
 		"@commitlint/cli": "^18.6.0",
 		"@commitlint/config-conventional": "^18.6.0",
+		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@typescript-eslint/eslint-plugin": "^6.20.0",
 		"@typescript-eslint/parser": "^6.20.0",
 		"commitlint": "^18.6.0",
@@ -31,6 +34,8 @@
 		"lint-staged": "^15.2.1",
 		"prettier": "^3.2.4",
 		"rollup": "^4.9.6",
+		"rollup-plugin-generate-package-json": "^3.2.0",
+		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.3.3"
 	}
 }
